--- a/public/list-view.html
+++ b/public/list-view.html
@@ -26,6 +26,29 @@
                 </a>
             </div>
         </div>
+        <div ng-if="!currentlyPlaying.length" ng-show="suggestions.length > 0">
+            <h1 class="text-center hand" ng-click="ctrl.collapseSection('suggestions')">
+                <span class="glyphicon pull-left collapse-icon glyphicon-chevron-{{ctrl.sections.suggestions ? 'right' : 'down'}}"></span>
+                Why not try...
+            </h1>
+            <div class="list-group" collapse="ctrl.sections.suggestions">
+                <a class="list-group-item hand overflow-ellipsis"
+                   ng-repeat="game in suggestions = (ctrl.gameService.games | filter:ctrl.isInSuggestions | orderBy:ctrl.sorting)"
+                   ng-click="ctrl.gameSelected(game)"
+                   ng-class="{active: game == ctrl.selectedGame, 'list-group-item-success': game.finished == 1}">
+                    <div class="pull-right">
+                        <span ng-style="{visibility: game.year ? 'visible' : 'hidden'}">({{game.year}})</span>
+                        <span class="glyphicon glyphicon-time" ng-style="{visibility: game.hasPlaytime() ? 'visible' : 'hidden'}"></span>
+                        <span ng-style="{visibility: game.hasRating() ? 'visible' : 'hidden'}">
+                            <span class="glyphicon glyphicon-star"></span>{{game.rating || 0}}
+                        </span>
+                    </div>
+                    <div class="overflow-ellipsis">
+                        {{game.title}}
+                    </div>
+                </a>
+            </div>
+        </div>
         <div ng-show="queue.length > 0">
             <h1 class="text-center hand" ng-click="ctrl.collapseSection('queue')">
                 <span class="glyphicon pull-left collapse-icon glyphicon-chevron-{{ctrl.sections.queue ? 'right' : 'down'}}"></span>
