--- a/public/list-view.html
+++ b/public/list-view.html
@@ -29,6 +29,7 @@
         <div ng-if="!currentlyPlaying.length" ng-show="suggestions.length > 0">
             <h1 class="text-center hand" ng-click="ctrl.collapseSection('suggestions')">
                 <span class="glyphicon pull-left collapse-icon glyphicon-chevron-{{ctrl.sections.suggestions ? 'right' : 'down'}}"></span>
+                <span class="glyphicon pull-right collapse-icon glyphicon-refresh" ng-click="ctrl.refreshSuggestions($event)"></span>
                 Why not try...
             </h1>
             <div class="list-group" collapse="ctrl.sections.suggestions">
