added simple hiding of games

--- a/public/form.html
+++ b/public/form.html
@@ -73,6 +73,12 @@
                                 In queue
                             </label>
                         </div>
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox" ng-model="model.hidden">
+                                Hidden from public
+                            </label>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-3">
