--- a/public/content.html
+++ b/public/content.html
@@ -65,7 +65,7 @@
                                 {{globalOptions.darkStyle ? 'Light theme' : 'Dark theme'}}
                             </a>
                         </li>
-                        <li class="divider"></li>
+                        <li ng-if="ctrl.gameService.users.length > 1" class="divider"></li>
                         <li ng-repeat="user in ctrl.gameService.users | filter:{'id': '!'+ctrl.userId} | orderBy:'username'">
                             <a class="hand" ng-click="ctrl.changeUser(user)">
                                 <span class="glyphicon glyphicon-user"></span>
